--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>SCSS Todo</title>
-        <link rel="stylesheet" href="style4.css">
+        <link rel="stylesheet" href="style/mixins.css">
     </head>
     <body>
         <header>
@@ -15,7 +15,7 @@
             <p>The Abyssinian is often a colorful 
                 cat with a distinctly ticked coat; 
             </p>
-            <p><img src="https://images.pexels.com/photos/2643812/pexels-photo-2643812.jpeg?cs=srgb&dl=pexels-tomas-ryant-2643812.jpg&fm=jpg" width="25%"></p>
+            <p><img src="https://images.pexels.com/photos/2643812/pexels-photo-2643812.jpeg?cs=srgb&dl=pexels-tomas-ryant-2643812.jpg&fm=jpg" width="35%"></p>
             <input type="button" value="Click">
         </main>
 
