--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>SCSS Todo</title>
-        <link rel="stylesheet" href="style/mixins.css">
+        <link rel="stylesheet" href="style/condition.css">
     </head>
     <body>
         <header>
