--- a/index.html
+++ b/index.html
@@ -3,25 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>SCSS Todo</title>
-        <link rel="stylesheet" href="style/condition.css">
+        <link rel="stylesheet" href="style/template.css">
     </head>
     <body>
-        <header>
-            <h1>SCSS Compiler to CSS</h1>
-        </header>
-
+        <nav>
+            <div class="home">Home</div>
+            <div class="services">Services</div>
+            <div class="about-us">About</div>
+            <div class="contact">Contact</div>
+        </nav>
         <main>
-            <p>Abyssinian</p>
-            <p>The Abyssinian is often a colorful 
-                cat with a distinctly ticked coat; 
-            </p>
-            <p><img src="https://images.pexels.com/photos/2643812/pexels-photo-2643812.jpeg?cs=srgb&dl=pexels-tomas-ryant-2643812.jpg&fm=jpg" width="35%"></p>
-            <input type="button" value="Click">
+            <h1>Welcome to Thailand Smile</h1>
+            <p>กรุงเทพมหานคร </p>
+            <p><img src="https://images.pexels.com/photos/971034/pexels-photo-971034.jpeg?cs=srgb&dl=pexels-iconcom-971034.jpg&fm=jpg" width="35%"></p>
+            <p>กรุงเทพมหานคร เป็นเมืองหลวงและนครที่มีประชากรมากที่สุดของประเทศไทย เป็นศูนย์กลางการปกครอง การศึกษา การคมนาคมขนส่ง การเงินการธนาคาร การพาณิชย์ การสื่อสาร และความเจริญของประเทศ</p>
         </main>
-
-        <footer>
-            <h2>©2021 Petfinder.com All trademarks are owned by Mr.Chuchart </h2>
-        </footer>
-        
     </body>
 </html>
